force-app/main/default/objects/Question__c/fields/Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_Name__c</fullName>
    <description>The user will add the question in this field</description>
    <label>Question Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>