force-app/main/default/objects/Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of questions which refers to either objective(MCQ) or subjective</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Objective</fullName>
            </value>
            <value>
                <fullName>Subjective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>